--- a/adminpanels/src/main/res/layout-normal-long/activity_main.xml
+++ b/adminpanels/src/main/res/layout-normal-long/activity_main.xml
@@ -36,10 +36,10 @@
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="24dp"
-                android:layout_marginTop="25dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/dashboard"
                 android:textColor="@android:color/white"
-                android:textSize="20sp" />
+                android:textSize="26sp" />
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/image_admin"
@@ -48,8 +48,8 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="25dp"
-                android:src="@drawable/ic_launcher_background" />
+                android:layout_marginEnd="30dp"
+                android:src="@drawable/ic_power" />
         </RelativeLayout>
     </LinearLayout>
     <RelativeLayout
@@ -76,10 +76,10 @@
                 android:columnCount="2"
                 android:padding="10dp">
                 <androidx.cardview.widget.CardView
-                    android:layout_width="135dp"
-                    android:layout_height="120dp"
+                    android:layout_width="150dp"
+                    android:layout_height="135dp"
                     android:layout_marginTop="40dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_marginLeft="55dp"
                     android:layout_marginBottom="5dp"
                     app:cardElevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -88,8 +88,8 @@
                         android:layout_height="match_parent"
                         android:orientation="vertical">
                         <ImageView
-                            android:layout_width="35dp"
-                            android:layout_height="35dp"
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
                             android:src="@drawable/person"/>
@@ -99,19 +99,19 @@
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
                             android:text="@string/data_menu"
-                            android:textSize="16sp"
+                            android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/list_menu"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
                             android:layout_gravity="center"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:layout_width="135dp"
-                    android:layout_height="120dp"
+                    android:layout_width="150dp"
+                    android:layout_height="135dp"
                     android:layout_marginTop="40dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginBottom="5dp"
@@ -132,21 +132,21 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
-                            android:text="@string/tambah_menu"
-                            android:textSize="16sp"
+                            android:text="@string/data_user"
+                            android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/add_menu"
-                            android:textSize="14sp"
+                            android:text="@string/list_user"
+                            android:textSize="16sp"
                             android:layout_gravity="center"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:layout_width="135dp"
-                    android:layout_height="120dp"
-                    android:layout_marginLeft="5dp"
+                    android:layout_width="150dp"
+                    android:layout_height="135dp"
+                    android:layout_marginLeft="55dp"
                     android:layout_marginTop="20dp"
                     app:cardElevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -165,20 +165,20 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
-                            android:text="@string/data_user"
-                            android:textSize="16sp"
+                            android:text="@string/data_income"
+                            android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/list_user"
+                            android:text="@string/total_income"
                             android:layout_gravity="center"
-                            android:textSize="14sp"/>
+                            android:textSize="16sp"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
-                    android:layout_width="135dp"
-                    android:layout_height="120dp"
+                    android:layout_width="150dp"
+                    android:layout_height="135dp"
                     android:layout_marginLeft="20dp"
                     android:layout_marginTop="20dp"
                     app:cardElevation="8dp"
@@ -199,13 +199,13 @@
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
                             android:text="@string/transaksi"
-                            android:textSize="16sp"
+                            android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/transaksi_pesanan"
-                            android:textSize="14sp"
+                            android:textSize="16sp"
                             android:layout_gravity="center"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
