--- a/adminpanels/src/main/res/layout-normal-notlong/activity_main.xml
+++ b/adminpanels/src/main/res/layout-normal-notlong/activity_main.xml
@@ -49,7 +49,7 @@
                 android:layout_alignParentEnd="true"
                 android:layout_marginTop="30dp"
                 android:layout_marginEnd="30dp"
-                android:src="@drawable/ic_launcher_background" />
+                android:src="@drawable/ic_power" />
         </RelativeLayout>
     </LinearLayout>
     <RelativeLayout
@@ -132,13 +132,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
-                            android:text="@string/tambah_menu"
+                            android:text="@string/data_user"
                             android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/add_menu"
+                            android:text="@string/list_user"
                             android:textSize="16sp"
                             android:layout_gravity="center"/>
                     </LinearLayout>
@@ -165,13 +165,13 @@
                             android:layout_height="wrap_content"
                             android:layout_marginTop="5dp"
                             android:layout_gravity="center"
-                            android:text="@string/data_user"
+                            android:text="@string/data_income"
                             android:textSize="18sp"
                             android:textColor="@android:color/black"/>
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="@string/list_user"
+                            android:text="@string/total_income"
                             android:layout_gravity="center"
                             android:textSize="16sp"/>
                     </LinearLayout>
