--- a/adminpanels/src/main/res/layout/card_data_income.xml
+++ b/adminpanels/src/main/res/layout/card_data_income.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardElevation="8dp">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -12,30 +13,17 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
-        <TextView
-            android:layout_width="95dp"
-            android:layout_height="wrap_content"
-            android:text="Tanggal"
-            android:textSize="20sp" />
-            <TextView
-                android:id="@+id/text_tanggal_income"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="01/01/1990"
-                android:textSize="20sp"/>
-        </LinearLayout>
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:background="#A92193B0"
+            android:orientation="horizontal"
+            android:padding="5dp">
         <TextView
             android:layout_width="95dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text="No Id"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:textColor="@android:color/white"/>
             <TextView
                 android:id="@+id/text_id_income"
                 android:layout_width="wrap_content"
@@ -43,7 +31,8 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginStart="10dp"
                 android:text="465849"
-                android:textSize="20sp"/>
+                android:textSize="20sp"
+                android:textColor="@android:color/white"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,6 +42,7 @@
             android:layout_width="95dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="5dp"
+            android:layout_marginLeft="10dp"
             android:text="TOTAL"
             android:textSize="20sp"/>
         <TextView
