ADMIN RIWAYAT FIX

--- a/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
+++ b/adminpanels/src/main/res/layout/card_data_pesanan_item.xml
@@ -12,29 +12,32 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/text_key"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_marginTop="5dp"
-            android:text="Key"
-            android:textStyle="bold"
-            android:textSize="20sp"/>
+
+            <TextView
+                android:id="@+id/text_key"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginRight="10dp"
+                android:text="Key"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
             <Button
                 android:id="@+id/btn_update_datapesanan"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="65dp"
+                android:layout_height="30dp"
                 android:background="@drawable/bg_btn_update"
-                android:textColor="@color/colorWhite"
+                android:textColor="@android:color/black"
                 android:text="Update"
+                android:textSize="12sp"
                 android:layout_alignParentEnd="true"
                 android:layout_marginEnd="10dp"
                 android:layout_marginTop="5dp"/>
         </RelativeLayout>
         <View
+            android:id="@+id/view_data_pesanan"
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:layout_marginLeft="5dp"
