--- a/adminpanels/src/main/res/layout/fragment_riwayat.xml
+++ b/adminpanels/src/main/res/layout/fragment_riwayat.xml
@@ -3,8 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Fragments.fragmentRiwayat">
+    tools:context=".Fragments.RiwayatFragment">
 
-
-
+   <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvd_riwayat_pesanan"
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       tools:listitem="@layout/cardriwayat_pesanan_item"/>
 </FrameLayout>
