--- a/adminpanels/src/main/res/layout/activity_data_pesanan.xml
+++ b/adminpanels/src/main/res/layout/activity_data_pesanan.xml
@@ -10,21 +10,14 @@
         android:id="@+id/toolbar_data_pesanan"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
+        android:elevation="8dp"
         android:background="@color/colorTop">
     </androidx.appcompat.widget.Toolbar>
-    <CheckBox
-        android:id="@+id/checkboxSelect"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Select All"
-        android:layout_marginEnd="5dp"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@id/toolbar_data_pesanan"/>
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvd_data_pesanan"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="5dp"
         tools:listitem="@layout/card_data_pesanan_item"
         android:layout_below="@id/toolbar_data_pesanan" />
 </RelativeLayout>
