--- a/adminpanels/src/main/res/layout/dialog_set_status.xml
+++ b/adminpanels/src/main/res/layout/dialog_set_status.xml
@@ -29,7 +29,7 @@
         android:layout_width="120dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="20dpad"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="center"
         android:background="@drawable/bg_btn_save"
         android:text="SAVE"
