--- a/app/src/main/res/layout/fragment_order_complete.xml
+++ b/app/src/main/res/layout/fragment_order_complete.xml
@@ -6,9 +6,45 @@
     tools:context=".Fragment.FragmentOrderComplete">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <LinearLayout
+        android:id="@+id/intro"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:layout_height="wrap_content"
+        android:layout_marginTop="80dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="match_parent"
+            android:layout_height="250dp"
+            android:layout_marginTop="65dp"
+            android:src="@drawable/undraw_empty"
+            tools:ignore="ContentDescription,MissingConstraints"
+            tools:layout_editor_absoluteX="0dp" />
+
+        <TextView
+            android:id="@+id/textView2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/riwayat_order"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textColor="@android:color/black"
+            />
+
+        <Button
+            android:id="@+id/btnBuyComplete"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginStart="25dp"
+            android:layout_marginEnd="25dp"
+            android:layout_marginTop="10dp"
+            android:text="Pesan"
+            android:textColor="@color/White"
+            android:fontFamily="@font/reg"
+            android:background="@drawable/bg_btn_red"
+            tools:ignore="HardcodedText" />
+
+    </LinearLayout>
 
 </FrameLayout>
