--- a/app/src/main/res/layout/fragment_payment.xml
+++ b/app/src/main/res/layout/fragment_payment.xml
@@ -30,8 +30,15 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_list_pembayaran"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/view1"
+        tools:listitem="@layout/item_row_payment" />
+
     <LinearLayout
-        android:id="@+id/intro"
+        android:id="@+id/introPay"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
