--- a/adminpanels/src/main/res/layout/activity_main.xml
+++ b/adminpanels/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
                 android:layout_marginStart="0dp"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="0dp"
-                android:text="Nama"
+                android:text="Tanggal"
                 android:textColor="@android:color/white"
                 android:textSize="18sp" />
 
@@ -113,7 +113,7 @@
                     android:layout_width="135dp"
                     android:layout_height="120dp"
                     android:layout_marginTop="40dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginBottom="5dp"
                     app:cardElevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -146,7 +146,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="135dp"
                     android:layout_height="120dp"
-                    android:layout_marginLeft="55dp"
+                    android:layout_marginStart="55dp"
                     android:layout_marginTop="20dp"
                     app:cardElevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -179,7 +179,7 @@
                 <androidx.cardview.widget.CardView
                     android:layout_width="135dp"
                     android:layout_height="120dp"
-                    android:layout_marginLeft="20dp"
+                    android:layout_marginStart="20dp"
                     android:layout_marginTop="20dp"
                     app:cardElevation="8dp"
                     app:cardCornerRadius="10dp">
@@ -207,6 +207,39 @@
                             android:text="@string/transaksi_pesanan"
                             android:textSize="14sp"
                             android:layout_gravity="center"/>
+                    </LinearLayout>
+                </androidx.cardview.widget.CardView>
+                <androidx.cardview.widget.CardView
+                    android:layout_width="135dp"
+                    android:layout_height="120dp"
+                    android:layout_marginStart="55dp"
+                    android:layout_marginTop="20dp"
+                    app:cardElevation="8dp"
+                    app:cardCornerRadius="10dp">
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:orientation="vertical">
+                        <ImageView
+                            android:layout_width="50dp"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="5dp"
+                            android:layout_gravity="center"
+                            android:src="@drawable/person"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="5dp"
+                            android:layout_gravity="center"
+                            android:text="@string/order"
+                            android:textSize="16sp"
+                            android:textColor="@android:color/black"/>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/list_order"
+                            android:layout_gravity="center"
+                            android:textSize="14sp"/>
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
             </GridLayout>
