--- a/adminpanels/src/main/res/layout/dialog_set.xml
+++ b/adminpanels/src/main/res/layout/dialog_set.xml
@@ -12,13 +12,6 @@
         android:textColor="@color/colorWhite"
         android:background="@color/colorTop"
         android:textSize="18sp"/>
-    <TextView
-        android:id="@+id/select_status"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Choose"
-        android:layout_gravity="center"
-        android:visibility="gone"/>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -27,18 +20,18 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Note :"
+            android:text="@string/text_note"
             android:textSize="18sp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Selesai = Pembayaran telah masuk dan \npesanan sedang diproses."/>
+            android:text="@string/text_selesai"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:text="Batalkan = Transaksi dibatalkan oleh user\natau dari pihak katering"/>
+            android:text="@string/text_batal"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
